--- a/stagioni/2022_2023/giornate/1/partite/2.html
+++ b/stagioni/2022_2023/giornate/1/partite/2.html
@@ -27,122 +27,122 @@ permalink: /2022_2023/giornate/1/partite/2
     <th>FV</th>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Milinkovic-Savic V.</span><span style="display: block"><img src="/assets/img/portiereImbattuto.png" alt="Portiere imbattuto"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> <b>Milinkovic-Savic V.</b></span><span style="display: block"><img src="/assets/img/portiereImbattuto.png" alt="Portiere imbattuto"></span></td>
     <td>TOR</td>
     <td>6.0</td>
     <td>7.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Rui Patricio</span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"><img src="/assets/img/golSubito.png" alt="Gol Subito"><img src="/assets/img/golSubito.png" alt="Gol Subito"><img src="/assets/img/golSubito.png" alt="Gol Subito"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> <b>Rui Patricio</b></span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"><img src="/assets/img/golSubito.png" alt="Gol Subito"><img src="/assets/img/golSubito.png" alt="Gol Subito"><img src="/assets/img/golSubito.png" alt="Gol Subito"></span></td>
     <td>ROM</td>
     <td>5.0</td>
     <td>1.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Faraoni</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <del>Faraoni</del></span><span style="display: block"><img src="/assets/img/out.webp" alt="Uscito"></span></td>
     <td>VER</td>
     <td>-</td>
     <td>-</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Kiwior</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Kiwior</b></span><span style="display: block"></span></td>
     <td>SPE</td>
     <td>5.5</td>
     <td>5.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Soppy</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Soppy</b></span><span style="display: block"></span></td>
     <td>ATA</td>
     <td>6.0</td>
     <td>6.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Parisi</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Parisi</b></span><span style="display: block"></span></td>
     <td>EMP</td>
     <td>6.0</td>
     <td>6.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Rrahmani</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Rrahmani</b></span><span style="display: block"></span></td>
     <td>NAP</td>
     <td>6.5</td>
     <td>6.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Kyriakopoulos</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Kyriakopoulos</b></span><span style="display: block"></span></td>
     <td>SAS</td>
     <td>5.5</td>
     <td>5.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Reca</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Reca</b></span><span style="display: block"></span></td>
     <td>SPE</td>
     <td>6.0</td>
     <td>6.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Dumfries</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Dumfries</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
     <td>INT</td>
     <td>5.0</td>
     <td>4.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Messias</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Messias</b></span><span style="display: block"></span></td>
     <td>MIL</td>
     <td>5.5</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Bajrami</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Bajrami</b></span><span style="display: block"></span></td>
     <td>EMP</td>
     <td>6.0</td>
     <td>6.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Milinkovic-Savic</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Milinkovic-Savic</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
     <td>LAZ</td>
     <td>5.5</td>
     <td>5.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Pereyra</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"><img src="/assets/img/golFatto.png" alt="Gol"><img src="/assets/img/assist.png" alt="Assist argento"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Pereyra</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"><img src="/assets/img/golFatto.png" alt="Gol"><img src="/assets/img/assist.png" alt="Assist argento"></span></td>
     <td>UDI</td>
     <td>8.0</td>
     <td>11.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Radonjic</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Radonjic</b></span><span style="display: block"></span></td>
     <td>TOR</td>
     <td>6.5</td>
     <td>6.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Zielinski</span><span style="display: block"><img src="/assets/img/assistSoft.png" alt="Assist bronzo"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Zielinski</b></span><span style="display: block"><img src="/assets/img/assistSoft.png" alt="Assist bronzo"></span></td>
     <td>NAP</td>
     <td>6.5</td>
     <td>7.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Nzola</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Nzola</b></span><span style="display: block"></span></td>
     <td>SPE</td>
     <td>5.0</td>
     <td>5.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Dessers</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Dessers</b></span><span style="display: block"></span></td>
     <td>CRE</td>
     <td>6.0</td>
     <td>6.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Martinez L.</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Martinez L.</b></span><span style="display: block"></span></td>
     <td>INT</td>
     <td>6.0</td>
     <td>6.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Osimhen</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Osimhen</b></span><span style="display: block"></span></td>
     <td>NAP</td>
     <td>6.0</td>
     <td>6.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Henry</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Henry</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
     <td>VER</td>
     <td>7.0</td>
     <td>6.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Arnautovic</span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Arnautovic</b></span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
     <td>BOL</td>
     <td>7.5</td>
     <td>13.5</td>
@@ -168,14 +168,14 @@ permalink: /2022_2023/giornate/1/partite/2
     <td></td>
     <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Svilar</span><span style="display: block"></span></td>
     <td>ROM</td>
-    <td>-</td>
-    <td>-</td>
+    <td>56.0</td>
+    <td>100.0</td>
   </tr>
   <tr>
     <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Gosens</span><span style="display: block"></span></td>
     <td>INT</td>
-    <td>-</td>
-    <td>-</td>
+    <td>55.0</td>
+    <td>100.0</td>
     <td></td>
     <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Ferrari G.</span><span style="display: block"></span></td>
     <td>SAS</td>
@@ -183,7 +183,7 @@ permalink: /2022_2023/giornate/1/partite/2
     <td>6.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Stojanovic</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Stojanovic</b></span><span style="display: block"><img src="/assets/img/in.webp" alt="Entrato"></span></td>
     <td>EMP</td>
     <td>5.5</td>
     <td>5.5</td>
@@ -218,8 +218,8 @@ permalink: /2022_2023/giornate/1/partite/2
   <tr>
     <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Gonzalez N.</span><span style="display: block"></span></td>
     <td>FIO</td>
-    <td>-</td>
-    <td>-</td>
+    <td>56.0</td>
+    <td>100.0</td>
     <td></td>
     <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Raspadori</span><span style="display: block"></span></td>
     <td>NAP</td>
