--- a/stagioni/2022_2023/giornate/1/partite/4.html
+++ b/stagioni/2022_2023/giornate/1/partite/4.html
@@ -27,122 +27,122 @@ permalink: /2022_2023/giornate/1/partite/4
     <th>FV</th>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Provedel</span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"><img src="/assets/img/golSubito.png" alt="Gol Subito"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> <b>Provedel</b></span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"><img src="/assets/img/golSubito.png" alt="Gol Subito"></span></td>
     <td>LAZ</td>
     <td>6.5</td>
     <td>4.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Perin</span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"><img src="/assets/img/rigoreParato.png" alt="Rigore Parato"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> <b>Perin</b></span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"><img src="/assets/img/rigoreParato.png" alt="Rigore Parato"></span></td>
     <td>JUV</td>
     <td>7.5</td>
     <td>9.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Kim</span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Kim</b></span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
     <td>NAP</td>
     <td>7.0</td>
     <td>10.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Udogie</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Udogie</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
     <td>UDI</td>
     <td>7.5</td>
     <td>10.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Smalling</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Smalling</b></span><span style="display: block"></span></td>
     <td>ROM</td>
     <td>5.0</td>
     <td>5.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Bastoni S.</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Bastoni S.</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
     <td>SPE</td>
     <td>7.0</td>
     <td>9.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Kalulu</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Kalulu</b></span><span style="display: block"></span></td>
     <td>MIL</td>
     <td>5.5</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Tomori</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Tomori</b></span><span style="display: block"></span></td>
     <td>MIL</td>
     <td>5.5</td>
     <td>5.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Scalvini</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Scalvini</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
     <td>ATA</td>
     <td>6.0</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Spinazzola</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Spinazzola</b></span><span style="display: block"></span></td>
     <td>ROM</td>
     <td>5.5</td>
     <td>5.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Calhanoglu</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Calhanoglu</b></span><span style="display: block"></span></td>
     <td>INT</td>
     <td>5.5</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Politano</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Politano</b></span><span style="display: block"></span></td>
     <td>NAP</td>
     <td>6.0</td>
     <td>6.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Kvaratskhelia</span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Kvaratskhelia</b></span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
     <td>NAP</td>
     <td>7.0</td>
     <td>10.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Zaccagni</span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Zaccagni</b></span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
     <td>LAZ</td>
     <td>7.0</td>
     <td>10.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Mkhitaryan</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Mkhitaryan</b></span><span style="display: block"></span></td>
     <td>INT</td>
     <td>6.5</td>
     <td>6.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Barak</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Barak</b></span><span style="display: block"></span></td>
     <td>FIO</td>
     <td>6.5</td>
     <td>6.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Rafael Leao</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"><img src="/assets/img/golFatto.png" alt="Gol"><img src="/assets/img/golFatto.png" alt="Gol"><img src="/assets/img/assist.png" alt="Assist argento"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Rafael Leao</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"><img src="/assets/img/golFatto.png" alt="Gol"><img src="/assets/img/golFatto.png" alt="Gol"><img src="/assets/img/assist.png" alt="Assist argento"></span></td>
     <td>MIL</td>
     <td>8.5</td>
     <td>15.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Lookman</span><span style="display: block"><img src="/assets/img/assistGold.png" alt="Assist oro"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Lookman</b></span><span style="display: block"><img src="/assets/img/assistGold.png" alt="Assist oro"></span></td>
     <td>ATA</td>
     <td>7.0</td>
     <td>8.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Di Maria</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Di Maria</b></span><span style="display: block"></span></td>
     <td>JUV</td>
     <td>5.5</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Dybala</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Dybala</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
     <td>ROM</td>
     <td>6.0</td>
     <td>5.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Lozano</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Lozano</b></span><span style="display: block"></span></td>
     <td>NAP</td>
     <td>5.5</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Milik</span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Milik</b></span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
     <td>JUV</td>
     <td>7.0</td>
     <td>10.0</td>
@@ -163,13 +163,13 @@ permalink: /2022_2023/giornate/1/partite/4
   <tr>
     <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Luis Maximiano</span><span style="display: block"></span></td>
     <td>LAZ</td>
-    <td>-</td>
-    <td>-</td>
+    <td>56.0</td>
+    <td>100.0</td>
     <td></td>
     <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Pinsoglio</span><span style="display: block"></span></td>
     <td>JUV</td>
-    <td>-</td>
-    <td>-</td>
+    <td>56.0</td>
+    <td>100.0</td>
   </tr>
   <tr>
     <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Fazio</span><span style="display: block"></span></td>
@@ -190,8 +190,8 @@ permalink: /2022_2023/giornate/1/partite/4
     <td></td>
     <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Okoli</span><span style="display: block"></span></td>
     <td>ATA</td>
-    <td>-</td>
-    <td>-</td>
+    <td>56.0</td>
+    <td>100.0</td>
   </tr>
   <tr>
     <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Sensi</span><span style="display: block"></span></td>
