--- a/stagioni/2022_2023/giornate/2/partite/4.html
+++ b/stagioni/2022_2023/giornate/2/partite/4.html
@@ -27,122 +27,122 @@ permalink: /2022_2023/giornate/2/partite/4
     <th>FV</th>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Skorupski</span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> <b>Skorupski</b></span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"></span></td>
     <td>BOL</td>
     <td>5.5</td>
     <td>4.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Musso</span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> <b>Musso</b></span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"></span></td>
     <td>ATA</td>
     <td>5.5</td>
     <td>4.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Alex Sandro</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Alex Sandro</b></span><span style="display: block"></span></td>
     <td>JUV</td>
     <td>6.0</td>
     <td>6.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Singo</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <del>Singo</del></span><span style="display: block"><img src="/assets/img/out.webp" alt="Uscito"></span></td>
     <td>TOR</td>
     <td>-</td>
     <td>-</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Igor</span><span style="display: block"><img src="/assets/img/espulso.png" alt="Rosso"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Igor</b></span><span style="display: block"><img src="/assets/img/espulso.png" alt="Rosso"></span></td>
     <td>FIO</td>
     <td>4.0</td>
     <td>3.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Bremer</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Bremer</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
     <td>JUV</td>
     <td>6.0</td>
     <td>8.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> De Vrij</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>De Vrij</b></span><span style="display: block"></span></td>
     <td>INT</td>
     <td>5.5</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Romagnoli</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <del>Romagnoli</del></span><span style="display: block"><img src="/assets/img/out.webp" alt="Uscito"></span></td>
     <td>LAZ</td>
     <td>-</td>
     <td>-</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Hernandez T.</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Hernandez T.</b></span><span style="display: block"></span></td>
     <td>MIL</td>
     <td>6.5</td>
     <td>6.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Mancini</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Mancini</b></span><span style="display: block"></span></td>
     <td>ROM</td>
     <td>6.0</td>
     <td>6.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Diaz B.</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <del>Diaz B.</del></span><span style="display: block"><img src="/assets/img/out.webp" alt="Uscito"></span></td>
     <td>MIL</td>
     <td>-</td>
     <td>-</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Zambo Anguissa</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Zambo Anguissa</b></span><span style="display: block"></span></td>
     <td>NAP</td>
     <td>6.5</td>
     <td>6.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Pellegrini Lo.</span><span style="display: block"><img src="/assets/img/rigoreSbagliato.png" alt="Rigore Sbagliato"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Pellegrini Lo.</b></span><span style="display: block"><img src="/assets/img/rigoreSbagliato.png" alt="Rigore Sbagliato"></span></td>
     <td>ROM</td>
     <td>5.5</td>
     <td>2.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Koopmeiners</span><span style="display: block"><img src="/assets/img/assist.png" alt="Assist argento"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Koopmeiners</b></span><span style="display: block"><img src="/assets/img/assist.png" alt="Assist argento"></span></td>
     <td>ATA</td>
     <td>7.0</td>
     <td>8.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Vlasic</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Vlasic</b></span><span style="display: block"></span></td>
     <td>TOR</td>
     <td>7.0</td>
     <td>7.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Pessina</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Pessina</b></span><span style="display: block"></span></td>
     <td>MON</td>
     <td>5.5</td>
     <td>5.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Pinamonti</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Pinamonti</b></span><span style="display: block"></span></td>
     <td>SAS</td>
     <td>5.5</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Jovic</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Jovic</b></span><span style="display: block"></span></td>
     <td>FIO</td>
     <td>5.5</td>
     <td>5.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Dzeko</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Dzeko</b></span><span style="display: block"></span></td>
     <td>INT</td>
     <td>5.0</td>
     <td>5.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Muriel</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Muriel</b></span><span style="display: block"></span></td>
     <td>ATA</td>
     <td>6.0</td>
     <td>6.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Petagna</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <del>Petagna</del></span><span style="display: block"><img src="/assets/img/out.webp" alt="Uscito"></span></td>
     <td>MON</td>
     <td>-</td>
     <td>-</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Caprari</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Caprari</b></span><span style="display: block"></span></td>
     <td>MON</td>
     <td>5.5</td>
     <td>5.5</td>
@@ -185,8 +185,8 @@ permalink: /2022_2023/giornate/2/partite/4
   <tr>
     <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Ghiglione</span><span style="display: block"></span></td>
     <td>CRE</td>
-    <td>-</td>
-    <td>-</td>
+    <td>56.0</td>
+    <td>100.0</td>
     <td></td>
     <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Dia</span><span style="display: block"></span></td>
     <td>SAL</td>
@@ -194,12 +194,12 @@ permalink: /2022_2023/giornate/2/partite/4
     <td>6.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Brozovic</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Brozovic</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"><img src="/assets/img/golFatto.png" alt="Gol"><img src="/assets/img/in.webp" alt="Entrato"></span></td>
     <td>INT</td>
     <td>7.0</td>
     <td>9.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Augello</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"><img src="/assets/img/assist.png" alt="Assist argento"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Augello</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"><img src="/assets/img/assist.png" alt="Assist argento"><img src="/assets/img/in.webp" alt="Entrato"></span></td>
     <td>SAM</td>
     <td>6.0</td>
     <td>6.5</td>
@@ -210,7 +210,7 @@ permalink: /2022_2023/giornate/2/partite/4
     <td>5.5</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Cambiaso</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Cambiaso</b></span><span style="display: block"><img src="/assets/img/in.webp" alt="Entrato"></span></td>
     <td>BOL</td>
     <td>6.5</td>
     <td>6.5</td>
@@ -227,7 +227,7 @@ permalink: /2022_2023/giornate/2/partite/4
     <td>6.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Piatek</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"><img src="/assets/img/rigoreSegnato.png" alt="Rigore Segnato"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Piatek</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"><img src="/assets/img/rigoreSegnato.png" alt="Rigore Segnato"><img src="/assets/img/in.webp" alt="Entrato"></span></td>
     <td>SAL</td>
     <td>7.0</td>
     <td>9.5</td>
