--- a/stagioni/2022_2023/giornate/2/partite/5.html
+++ b/stagioni/2022_2023/giornate/2/partite/5.html
@@ -27,122 +27,122 @@ permalink: /2022_2023/giornate/2/partite/5
     <th>FV</th>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Silvestri</span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> <b>Silvestri</b></span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"></span></td>
     <td>UDI</td>
     <td>5.5</td>
     <td>4.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Falcone</span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> <b>Falcone</b></span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"></span></td>
     <td>LEC</td>
     <td>6.0</td>
     <td>5.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Mario Rui</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Mario Rui</b></span><span style="display: block"></span></td>
     <td>NAP</td>
     <td>6.0</td>
     <td>6.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Rrahmani</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Rrahmani</b></span><span style="display: block"></span></td>
     <td>NAP</td>
     <td>6.0</td>
     <td>6.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Ibanez</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Ibanez</b></span><span style="display: block"></span></td>
     <td>ROM</td>
     <td>6.5</td>
     <td>6.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Bonucci</span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"><img src="/assets/img/rigoreSbagliato.png" alt="Rigore Sbagliato"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Bonucci</b></span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"><img src="/assets/img/rigoreSbagliato.png" alt="Rigore Sbagliato"></span></td>
     <td>JUV</td>
     <td>6.5</td>
     <td>6.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Skriniar</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Skriniar</b></span><span style="display: block"></span></td>
     <td>INT</td>
     <td>5.5</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Faraoni</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <del>Faraoni</del></span><span style="display: block"><img src="/assets/img/out.webp" alt="Uscito"></span></td>
     <td>VER</td>
     <td>-</td>
     <td>-</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Patric</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Patric</b></span><span style="display: block"></span></td>
     <td>LAZ</td>
     <td>5.5</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Soppy</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Soppy</b></span><span style="display: block"></span></td>
     <td>ATA</td>
     <td>6.0</td>
     <td>6.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> De Ketelaere</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>De Ketelaere</b></span><span style="display: block"></span></td>
     <td>MIL</td>
     <td>6.0</td>
     <td>6.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Messias</span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Messias</b></span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
     <td>MIL</td>
     <td>7.0</td>
     <td>10.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Bennacer</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Bennacer</b></span><span style="display: block"></span></td>
     <td>MIL</td>
     <td>6.0</td>
     <td>6.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Milinkovic-Savic</span><span style="display: block"><img src="/assets/img/assist.png" alt="Assist argento"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Milinkovic-Savic</b></span><span style="display: block"><img src="/assets/img/assist.png" alt="Assist argento"></span></td>
     <td>LAZ</td>
     <td>7.0</td>
     <td>8.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Barella</span><span style="display: block"><img src="/assets/img/assistGold.png" alt="Assist oro"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Barella</b></span><span style="display: block"><img src="/assets/img/assistGold.png" alt="Assist oro"></span></td>
     <td>INT</td>
     <td>6.0</td>
     <td>7.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Radonjic</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Radonjic</b></span><span style="display: block"></span></td>
     <td>TOR</td>
     <td>6.0</td>
     <td>6.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Samardzic</span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Samardzic</b></span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
     <td>UDI</td>
     <td>7.0</td>
     <td>10.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Henry</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Henry</b></span><span style="display: block"></span></td>
     <td>VER</td>
     <td>5.5</td>
     <td>5.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Pedro</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <del>Pedro</del></span><span style="display: block"><img src="/assets/img/out.webp" alt="Uscito"></span></td>
     <td>LAZ</td>
     <td>-</td>
     <td>-</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Martinez L.</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Martinez L.</b></span><span style="display: block"></span></td>
     <td>INT</td>
     <td>6.5</td>
     <td>6.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Immobile</span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Immobile</b></span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
     <td>LAZ</td>
     <td>7.0</td>
     <td>10.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Satriano</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Satriano</b></span><span style="display: block"></span></td>
     <td>EMP</td>
     <td>6.0</td>
     <td>6.0</td>
@@ -163,8 +163,8 @@ permalink: /2022_2023/giornate/2/partite/5
   <tr>
     <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Padelli</span><span style="display: block"></span></td>
     <td>UDI</td>
-    <td>-</td>
-    <td>-</td>
+    <td>56.0</td>
+    <td>100.0</td>
     <td></td>
     <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Milinkovic-Savic V.</span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"></span></td>
     <td>TOR</td>
@@ -179,16 +179,16 @@ permalink: /2022_2023/giornate/2/partite/5
     <td></td>
     <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Gosens</span><span style="display: block"></span></td>
     <td>INT</td>
-    <td>-</td>
-    <td>-</td>
+    <td>55.0</td>
+    <td>100.0</td>
   </tr>
   <tr>
     <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Milenkovic</span><span style="display: block"></span></td>
     <td>FIO</td>
-    <td>-</td>
-    <td>-</td>
+    <td>56.0</td>
+    <td>100.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Stojanovic</span><span style="display: block"><img src="/assets/img/assist.png" alt="Assist argento"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Stojanovic</b></span><span style="display: block"><img src="/assets/img/assist.png" alt="Assist argento"><img src="/assets/img/in.webp" alt="Entrato"></span></td>
     <td>EMP</td>
     <td>6.0</td>
     <td>7.0</td>
@@ -216,7 +216,7 @@ permalink: /2022_2023/giornate/2/partite/5
     <td>6.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Mota</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Mota</b></span><span style="display: block"><img src="/assets/img/in.webp" alt="Entrato"></span></td>
     <td>MON</td>
     <td>5.5</td>
     <td>5.5</td>
@@ -229,13 +229,13 @@ permalink: /2022_2023/giornate/2/partite/5
   <tr>
     <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Belotti</span><span style="display: block"></span></td>
     <td>ROM</td>
-    <td>-</td>
-    <td>-</td>
+    <td>55.0</td>
+    <td>100.0</td>
     <td></td>
     <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Gonzalez N.</span><span style="display: block"></span></td>
     <td>FIO</td>
-    <td>-</td>
-    <td>-</td>
+    <td>56.0</td>
+    <td>100.0</td>
   </tr>
 </table>
 <table>
