--- a/stagioni/2022_2023/giornate/3/partite/1.html
+++ b/stagioni/2022_2023/giornate/3/partite/1.html
@@ -27,122 +27,122 @@ permalink: /2022_2023/giornate/3/partite/1
     <th>FV</th>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Handanovic</span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"><img src="/assets/img/golSubito.png" alt="Gol Subito"><img src="/assets/img/golSubito.png" alt="Gol Subito"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> <b>Handanovic</b></span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"><img src="/assets/img/golSubito.png" alt="Gol Subito"><img src="/assets/img/golSubito.png" alt="Gol Subito"></span></td>
     <td>INT</td>
     <td>6.0</td>
     <td>3.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Silvestri</span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> <b>Silvestri</b></span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"></span></td>
     <td>UDI</td>
     <td>6.5</td>
     <td>5.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> De Sciglio</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>De Sciglio</b></span><span style="display: block"></span></td>
     <td>JUV</td>
     <td>5.5</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Mario Rui</span><span style="display: block"><img src="/assets/img/assistSoft.png" alt="Assist bronzo"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Mario Rui</b></span><span style="display: block"><img src="/assets/img/assistSoft.png" alt="Assist bronzo"></span></td>
     <td>NAP</td>
     <td>7.0</td>
     <td>7.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Hateboer</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Hateboer</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
     <td>ATA</td>
     <td>6.0</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Ibanez</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Ibanez</b></span><span style="display: block"></span></td>
     <td>ROM</td>
     <td>6.0</td>
     <td>6.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Demiral</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Demiral</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
     <td>ATA</td>
     <td>6.0</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Dimarco</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Dimarco</b></span><span style="display: block"></span></td>
     <td>INT</td>
     <td>6.0</td>
     <td>6.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Danilo</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Danilo</b></span><span style="display: block"></span></td>
     <td>JUV</td>
     <td>5.0</td>
     <td>5.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Patric</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Patric</b></span><span style="display: block"></span></td>
     <td>LAZ</td>
     <td>6.5</td>
     <td>6.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Kostic</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Kostic</b></span><span style="display: block"></span></td>
     <td>JUV</td>
     <td>5.5</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> De Ketelaere</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>De Ketelaere</b></span><span style="display: block"></span></td>
     <td>MIL</td>
     <td>6.0</td>
     <td>6.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Malinovskyi</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Malinovskyi</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
     <td>ATA</td>
-    <td>-</td>
+    <td>55.0</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Bennacer</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Bennacer</b></span><span style="display: block"></span></td>
     <td>MIL</td>
     <td>6.0</td>
     <td>6.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Mckennie</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Mckennie</b></span><span style="display: block"></span></td>
     <td>JUV</td>
     <td>5.5</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Barella</span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Barella</b></span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
     <td>INT</td>
     <td>6.5</td>
     <td>9.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Paredes</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Paredes</b></span><span style="display: block"></span></td>
     <td>JUV</td>
     <td>5.0</td>
     <td>5.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Samardzic</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Samardzic</b></span><span style="display: block"></span></td>
     <td>UDI</td>
     <td>6.0</td>
     <td>6.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Giroud</span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Giroud</b></span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
     <td>MIL</td>
     <td>6.5</td>
     <td>9.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Pedro</span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Pedro</b></span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
     <td>LAZ</td>
     <td>7.0</td>
     <td>10.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Ceesay</span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Ceesay</b></span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
     <td>LEC</td>
     <td>7.0</td>
     <td>10.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Immobile</span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"><img src="/assets/img/rigoreSegnato.png" alt="Rigore Segnato"><img src="/assets/img/assist.png" alt="Assist argento"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Immobile</b></span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"><img src="/assets/img/rigoreSegnato.png" alt="Rigore Segnato"><img src="/assets/img/assist.png" alt="Assist argento"></span></td>
     <td>LAZ</td>
     <td>8.0</td>
     <td>15.0</td>
@@ -163,13 +163,13 @@ permalink: /2022_2023/giornate/3/partite/1
   <tr>
     <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Cordaz</span><span style="display: block"></span></td>
     <td>INT</td>
-    <td>-</td>
-    <td>-</td>
+    <td>56.0</td>
+    <td>100.0</td>
     <td></td>
     <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Padelli</span><span style="display: block"></span></td>
     <td>UDI</td>
-    <td>-</td>
-    <td>-</td>
+    <td>56.0</td>
+    <td>100.0</td>
   </tr>
   <tr>
     <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Toloi</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
@@ -190,8 +190,8 @@ permalink: /2022_2023/giornate/3/partite/1
     <td></td>
     <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Milenkovic</span><span style="display: block"></span></td>
     <td>FIO</td>
-    <td>-</td>
-    <td>-</td>
+    <td>56.0</td>
+    <td>100.0</td>
   </tr>
   <tr>
     <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Pasalic</span><span style="display: block"></span></td>
@@ -218,8 +218,8 @@ permalink: /2022_2023/giornate/3/partite/1
   <tr>
     <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Boga</span><span style="display: block"></span></td>
     <td>ATA</td>
-    <td>-</td>
-    <td>-</td>
+    <td>56.0</td>
+    <td>100.0</td>
     <td></td>
     <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Mota</span><span style="display: block"></span></td>
     <td>MON</td>
@@ -229,8 +229,8 @@ permalink: /2022_2023/giornate/3/partite/1
   <tr>
     <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Berardi</span><span style="display: block"></span></td>
     <td>SAS</td>
-    <td>-</td>
-    <td>-</td>
+    <td>56.0</td>
+    <td>100.0</td>
     <td></td>
     <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Belotti</span><span style="display: block"></span></td>
     <td>ROM</td>
