--- a/stagioni/2022_2023/giornate/3/partite/2.html
+++ b/stagioni/2022_2023/giornate/3/partite/2.html
@@ -27,122 +27,122 @@ permalink: /2022_2023/giornate/3/partite/2
     <th>FV</th>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Milinkovic-Savic V.</span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> <b>Milinkovic-Savic V.</b></span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"></span></td>
     <td>TOR</td>
     <td>6.5</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Perin</span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> <b>Perin</b></span><span style="display: block"><img src="/assets/img/golSubito.png" alt="Gol Subito"></span></td>
     <td>JUV</td>
     <td>6.0</td>
     <td>5.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Reca</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Reca</b></span><span style="display: block"></span></td>
     <td>SPE</td>
     <td>6.5</td>
     <td>6.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Spinazzola</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Spinazzola</b></span><span style="display: block"></span></td>
     <td>ROM</td>
     <td>5.5</td>
     <td>5.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Rrahmani</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Rrahmani</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
     <td>NAP</td>
     <td>6.0</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Tomori</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Tomori</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
     <td>MIL</td>
     <td>5.5</td>
     <td>5.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Bonucci</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <del>Bonucci</del></span><span style="display: block"><img src="/assets/img/out.webp" alt="Uscito"></span></td>
     <td>JUV</td>
     <td>-</td>
     <td>-</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Bastoni S.</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Bastoni S.</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
     <td>SPE</td>
     <td>6.0</td>
     <td>5.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Soppy</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <del>Soppy</del></span><span style="display: block"><img src="/assets/img/out.webp" alt="Uscito"></span></td>
     <td>ATA</td>
     <td>-</td>
     <td>-</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Udogie</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Udogie</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
     <td>UDI</td>
     <td>5.5</td>
     <td>5.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Djuricic</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Djuricic</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
     <td>SAM</td>
     <td>5.5</td>
     <td>5.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Politano</span><span style="display: block"><img src="/assets/img/rigoreSegnato.png" alt="Rigore Segnato"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Politano</b></span><span style="display: block"><img src="/assets/img/rigoreSegnato.png" alt="Rigore Segnato"></span></td>
     <td>NAP</td>
     <td>7.0</td>
     <td>10.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Milinkovic-Savic</span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"><img src="/assets/img/assist.png" alt="Assist argento"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Milinkovic-Savic</b></span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"><img src="/assets/img/assist.png" alt="Assist argento"></span></td>
     <td>LAZ</td>
     <td>7.5</td>
     <td>11.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Zaccagni</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Zaccagni</b></span><span style="display: block"></span></td>
     <td>LAZ</td>
     <td>6.5</td>
     <td>6.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Radonjic</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Radonjic</b></span><span style="display: block"></span></td>
     <td>TOR</td>
     <td>5.5</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Barak</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Barak</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"></span></td>
     <td>FIO</td>
     <td>5.5</td>
     <td>5.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Satriano</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Satriano</b></span><span style="display: block"></span></td>
     <td>EMP</td>
     <td>6.0</td>
     <td>6.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Beto</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Beto</b></span><span style="display: block"></span></td>
     <td>UDI</td>
     <td>5.5</td>
     <td>5.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Martinez L.</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Martinez L.</b></span><span style="display: block"></span></td>
     <td>INT</td>
     <td>5.5</td>
     <td>5.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Dybala</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <del>Dybala</del></span><span style="display: block"><img src="/assets/img/out.webp" alt="Uscito"></span></td>
     <td>ROM</td>
     <td>-</td>
     <td>-</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Nzola</span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Nzola</b></span><span style="display: block"><img src="/assets/img/ammonito.png" alt="Giallo"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
     <td>SPE</td>
     <td>7.0</td>
     <td>9.5</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Lookman</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> <b>Lookman</b></span><span style="display: block"></span></td>
     <td>ATA</td>
     <td>6.0</td>
     <td>6.0</td>
@@ -168,33 +168,33 @@ permalink: /2022_2023/giornate/3/partite/2
     <td></td>
     <td><span style="display: block"><img src="/assets/img/ruolo_p.png" alt="P"> Szczesny</span><span style="display: block"></span></td>
     <td>JUV</td>
-    <td>-</td>
-    <td>-</td>
+    <td>56.0</td>
+    <td>100.0</td>
   </tr>
   <tr>
     <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Gosens</span><span style="display: block"></span></td>
     <td>INT</td>
-    <td>-</td>
-    <td>-</td>
+    <td>56.0</td>
+    <td>100.0</td>
     <td></td>
     <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Vojvoda</span><span style="display: block"></span></td>
     <td>TOR</td>
-    <td>-</td>
-    <td>-</td>
+    <td>56.0</td>
+    <td>100.0</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Stojanovic</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Stojanovic</b></span><span style="display: block"><img src="/assets/img/in.webp" alt="Entrato"></span></td>
     <td>EMP</td>
     <td>6.0</td>
     <td>6.0</td>
     <td></td>
-    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> Carlos Augusto</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_d.png" alt="D"> <b>Carlos Augusto</b></span><span style="display: block"><img src="/assets/img/in.webp" alt="Entrato"></span></td>
     <td>MON</td>
     <td>6.5</td>
     <td>6.5</td>
   </tr>
   <tr>
-    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> Messias</span><span style="display: block"></span></td>
+    <td><span style="display: block"><img src="/assets/img/ruolo_c.png" alt="C"> <b>Messias</b></span><span style="display: block"><img src="/assets/img/in.webp" alt="Entrato"></span></td>
     <td>MIL</td>
     <td>6.0</td>
     <td>6.0</td>
@@ -223,8 +223,8 @@ permalink: /2022_2023/giornate/3/partite/2
     <td></td>
     <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Milik</span><span style="display: block"></span></td>
     <td>JUV</td>
-    <td>-</td>
-    <td>-</td>
+    <td>56.0</td>
+    <td>100.0</td>
   </tr>
   <tr>
     <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Gonzalez N.</span><span style="display: block"><img src="/assets/img/golFatto.png" alt="Gol"></span></td>
@@ -234,8 +234,8 @@ permalink: /2022_2023/giornate/3/partite/2
     <td></td>
     <td><span style="display: block"><img src="/assets/img/ruolo_a.png" alt="A"> Colombo</span><span style="display: block"></span></td>
     <td>LEC</td>
-    <td>-</td>
-    <td>-</td>
+    <td>56.0</td>
+    <td>100.0</td>
   </tr>
 </table>
 <table>
